--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,12 +38,7 @@
 		],
 		"no-param-reassign": 0,
 		//Need to add this, since airbnb bugs arrow functions.
-		"react/function-component-definition": [
-			2,
-			{
-				"namedComponents": "function-declaration"
-			}
-		]
+		"import/prefer-default-export": "off"
 	},
 	"settings": {
 		"import/resolver": {
