--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,8 @@
 		],
 		"no-param-reassign": 0,
 		//Need to add this, since airbnb bugs arrow functions.
-		"import/prefer-default-export": "off"
+		"import/prefer-default-export": "off",
+		"react/no-array-index-key": "off"
 	},
 	"settings": {
 		"import/resolver": {
